# functionless

./: .gitignore  Functionless.hs  Main.hs  README.md  build.gradle  foo.cabal  functionless.cabal  gradle.properties  shell.nix  stack.yaml
app/: Main.hs
examples/string_example/: Setup.hs  StringExample.hs  build.gradle  string-example.cabal
examples/string_example/cbits/: jni_glue.c
examples/string_example/src/main/java/io/tweag/functionless/: Entrypoint.java
examples/void_example/: Setup.hs  VoidExample.hs  void-example.cabal
examples/void_example/cbits/: jni_glue.c
examples/void_example/src/main/java/io/tweag/functionless/: Entrypoint.java  HaskellLibraryLoader.java
jarify/: build.gradle  stack.yaml
jarify/src/main/java/io/tweag/jarify/: .JarifyMain.java.swp  JarifyMain.java
src/: Foo.hs
src/Functionless/: Utils.hs
src/main/haskell/Functionless/: TH.hs
src/main/java/: Main.java
src/main/java/io/tweag/functionless/: Entrypoint.java  HaskellLibraryLoader.java
