name:                foo
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          alp.mestanogullari@tweag.io
copyright:           2016 EURL Tweag
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Foo
  build-depends: base >=4.7 && <5, jni, jvm, text
  default-language: Haskell2010
  hs-source-dirs: src

executable foo
  main-is: Main.hs
  build-depends: base, foo
  default-language: Haskell2010
  ghc-options: -dynamic -threaded
  ld-options: -pie
