name:                void-example
version:             0.1
license:             BSD3
author:              Tweag I/O
maintainer:          felix.raimundo@tweag.io
copyright:           2017 EURL Tweag
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: VoidExample
  build-depends:
    base >=4.7 && <5,
    jarify,
    jni,
    jvm,
    text
  default-language: Haskell2010

executable void-example-exe
  main-is: Main.hs
  build-depends:
    base
    , void-example
  default-language: Haskell2010
  ghc-options: -dynamic -threaded
  ld-options: -pie
